--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "site-phisical-education",
+  "name": "site-scientific-center-of-connection",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@n8tb1t/use-scroll-position": "^2.0.3",
+    "@smakss/react-scroll-direction": "^1.0.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "express": "^4.18.2",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
-    "mongoose": "^6.7.3",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
+    "react-fullpage": "^0.1.19",
     "react-icons": "^4.6.0",
+    "react-iframe": "^1.8.5",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-spring": "^9.5.5",
